# llm-webtext-classification

./: README.md  innovative_firm_classification_LORA.ipynb
datasets/: web_text_summary050824.csv
innovative-firm-classification/: Makefile  README.md  pyproject.toml
innovative-firm-classification/docs/: mkdocs.yml
innovative-firm-classification/docs/docs/: index.md
innovative-firm-classification/notebooks/: 1.01-jk-exploratory testing.ipynb
